fixed image bug, images uploaded now appear on the homepage / header banner. Changin styling to a dark mode look

--- a/app/style/new-post.css
+++ b/app/style/new-post.css
@@ -10,10 +10,14 @@ form > * {
 
 .navigation a{
    text-decoration: none;
-   color: black;
-   border: 1px solid black;
+   color: white;
+   border: 1px solid white;
    border-radius: 5px;
    padding: 5px 8px;
+}
+
+.form-container label {
+   background-color: white;
 }
 
 #form-post-title, #form-post-content {
