--- a/app/style/post.css
+++ b/app/style/post.css
@@ -1,7 +1,7 @@
 .navigation a{
    text-decoration: none;
-   color: black;
-   border: 1px solid black;
+   color: white;
+   border: 1px solid white;
    border-radius: 5px;
    padding: 5px 8px;
 }
